--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* Magic Matrix GUI using Html & CSS
+Author : Braj Kishor 
+         IIIT Nagpur 
+Date     27/06/19
+
+*/
+
+
 .description{
     margin-top: 23px;
     margin-left: 5%;
